tests/Checker/everything/errors/19c.vc
void a() { return; }

int main(int a) {
    a();
    return 1;
}
